# coinbacked

./: .gitignore  LICENSE  README.md
app/: Makefile  README.md  render.py
app/src/blocks/: block_app_box.html
app/src/css/: chota.css  coinbacked-app.css  fonts.css  pageloader.min.css
app/src/html/: index.html
app/src/html/blocks/: block_app_box.html  block_bootstrap_script.html  block_css_scripts.html  block_header.html  block_popups.html
app/src/script/: coinbacked-app.js  coinbacked.min.js
js/: README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
js/fiddle/web/: index.html
js/src/: coinbacked.ts
rust/coinbacked/: Cargo.toml
rust/coinbacked/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
rust/coinbacked/src/math/: common.rs  decimal.rs  mod.rs
