[package]
name = "coinbacked"
version = "0.4.2"
edition = "2021"

[dependencies]
arrayref = "0.3.6"
num-derive = "0.3.3"
num-traits = "0.2.15"
solana-program = "1.15.2"
solana-security-txt = "1.1.0"
spl-associated-token-account = "1.1.2"
spl-token = "3.5.0"
thiserror = "1.0.39"
uint = "0.9.5"

[dev-dependencies]
solana-program-test = "1.15.2"
solana-sdk = "1.15.2"

[lib]
name = "coinbacked"
crate-type = ["cdylib", "lib"]
